// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioView renders RTL styling 1`] = `
<div
  className="c-chk is-rtl "
  data-garden-id="radios.radio_view"
  data-garden-version="version"
/>
`;

exports[`RadioView renders default styling 1`] = `
<div
  className="c-chk "
  data-garden-id="radios.radio_view"
  data-garden-version="version"
/>
`;
